commit de backup

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 PORT=5001
-REACT_APP_COLOR_OCCUPIED: '#e06666'
+REACT_APP_COLOR_AVAILABLE= '#0CA014'
+REACT_APP_COLOR_OCCUPIED= '#E06666'
+REACT_APP_TIMEOUT_TABLE_DATA= 5000
