--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "axios": "^0.27.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
